--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 
     // Exemplo de uso
     var jogadores = [
-        { nome: "Jogador 1", rating: 800 },
-        { nome: "Jogador 2", rating: 850 },
-        { nome: "Jogador 3", rating: 820 },
-        { nome: "Jogador 4", rating: 830 },
-        { nome: "Jogador 5", rating: 1130 },
+        { id: 0, nome: "Jogador 1", rating: 800 },
+        { id: 1, nome: "Jogador 2", rating: 850 },
+        { id: 2, nome: "Jogador 3", rating: 820 },
+        { id: 3, nome: "Jogador 4", rating: 830 },
+        { id: 4, nome: "Jogador 5", rating: 1130 },
     ];
 
     var [time1, time2] = separarTimes(jogadores);
