--- a/frontend/index.html
+++ b/frontend/index.html
@@ -123,6 +123,26 @@
         }
     }
 
+    function shufflePlayers(array) {
+        // Função para embaralhar os elementos de um array
+        function shuffle(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
+            }
+            return array;
+        }
+
+        // Verifica se o array tem a chave "players" e se é um array
+        if (Array.isArray(array.players)) {
+            array.players = shuffle(array.players);
+            return array;
+        } else {
+            console.error("O objeto não contém a chave 'players' ou 'players' não é um array.");
+            return null;
+        }
+    }
+
     function clearSearch() {
         $("#newPlayer").val("");
         $("#selectBar").hide(200);
@@ -135,6 +155,8 @@
                 return { "id": item.id };
             })
         }
+
+        expectedFormat = shufflePlayers(expectedFormat);
 
         balanceTeam(expectedFormat, data => {
             document.querySelector("#team1").innerHTML = '';
