--- a/frontend/ranking.html
+++ b/frontend/ranking.html
@@ -43,34 +43,12 @@
             <img class="mr-3" src="./images/trophy.webp" alt=""
                 width="48" height="48">
             <div class="lh-100">
-                <h6 class="mb-0 text-white lh-100">Paulo Ricardo</h6>
-                <small>Rating: 897</small>
+                <h6 class="mb-0 text-white lh-100" id="top1Name">Paulo Ricardo</h6>
+                <small id="top1Rating">Rating: 897</small>
             </div>
         </div>
 
-        <div class="my-3 p-3 bg-white rounded box-shadow">
-            <div class="media text-muted pt-3">
-                <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
-                    <strong class="d-block text-gray-dark">Carlos Cardoso</strong>
-                    Rating: 860
-                </p>
-            </div>
-            <div class="media text-muted pt-3">
-                <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
-                    <strong class="d-block text-gray-dark">Laura Machado</strong>
-                    Rating: 840
-                </p>
-            </div>
-            <div class="media text-muted pt-3">
-                <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
-                    <strong class="d-block text-gray-dark">Cristian Curtinaz</strong>
-                    Rating: 820
-                </p>
-            </div>
-            <small class="d-block text-right mt-3">
-                <a href="#">Ver ranking completo</a>
-            </small>
-        </div>
+        <div class="my-3 p-3 bg-white rounded box-shadow" id="topPlayersPlace"></div>
     </main>
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
@@ -92,10 +70,56 @@
     </script>
 
     <script type="module">
+
+        function getElo(rating) {
+            if(rating <= 699) {
+                return 1;
+            } else if (rating <= 799) {
+                return 2;
+            } else if (rating <= 899) {
+                return 3;
+            } else if (rating <= 999) {
+                return 4;
+            } else {
+                return 5;
+            }
+        }
+
         import { getRanking } from './ajax/users.js';
 
-        
-            getRanking(10, 1, data => {
+            getRanking(30, 1, data => {
+                var index = 0;
+                var playersHtml = "";
+                for(var player of data.data) {
+                    if(index == 0) {
+                        $("#top1Name").text(player.name);
+                        $("#top1Rating").text("Rating: " + player.rating.toFixed(0));
+                    } else {
+                        
+                        var _thisPlayerHtml = `
+                        <div class="media text-muted pt-3 border-bottom border-gray">
+                            <div class="mr-2 rounded" data-holder-rendered="true" style="width: 32px; height: 32px; text-align: center; font-weight: 800;">${index+1}</div>
+                            <p class="media-body pb-3 mb-0 small lh-125">
+                                <strong class="d-block text-gray-dark">${player.name}</strong>
+                                Rating: ${player.rating.toFixed(0)}
+                            </p>
+                            <img src="./images/elos/${getElo(player.rating)}.png" style="width: 35px" />
+                        </div>
+                        `;
+
+                        playersHtml += _thisPlayerHtml;
+                    }
+                    index++;
+                }
+
+                playersHtml += `
+                    <small class="d-block text-right mt-3">
+                        <a href="#">Ver ranking completo</a>
+                    </small>
+                `;
+
+                $("#topPlayersPlace").html(playersHtml);
+
                 console.log(data);
             }, err => {
                 console.log(err);
