--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,55 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
+
     <title>Volelo</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="./dist/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="./dist/offcanvas.css" rel="stylesheet">
+</head>
+
+<body class="bg-light">
+
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Volelo</a>
+        <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="navbar-collapse offcanvas-collapse justify-content-end" id="navbarsExampleDefault">
+            <ul class="navbar-nav mr-0">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Ranking <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./game.html">Partida</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <main role="main" class="container">
+        <div class="d-flex align-items-center p-3 my-3 text-white-50 bg-purple rounded box-shadow">
+            <img class="mr-3" src="./images/trophy.webp" alt=""
+                width="48" height="48">
+            <div class="lh-100">
+                <h6 class="mb-0 text-white lh-100" id="top1Name">Paulo Ricardo</h6>
+                <small id="top1Rating">Rating: 897</small>
+            </div>
+        </div>
+
+        <div class="my-3 p-3 bg-white rounded box-shadow" id="topPlayersPlace"></div>
+    </main>
+
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
@@ -12,233 +57,75 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./style.css">
-</head>
+    <script src="../../assets/js/vendor/holder.min.js"></script>
+    <script>
+        $(function () {
+            'use strict'
 
-<body>
-    <section id="principal">
-        <h2>Volelo</h2>
+            $('[data-toggle="offcanvas"]').on('click', function () {
+                $('.offcanvas-collapse').toggleClass('open')
+            })
+        })
+    </script>
 
-        <div>
-            <div class="form_control">
-                <div>
-                    <label for="newPlayer">Adicionar jogador(a)</label>
-                    <div class="inputButton">
-                        <div id="searchBarControll">
-                            <input type="text" id="newPlayer">
-                            <button id="clear" onclick="clearSearch()">X</button>
+    <script type="module">
+
+        function getElo(rating) {
+            if(rating <= 699) {
+                return 1;
+            } else if (rating <= 799) {
+                return 2;
+            } else if (rating <= 899) {
+                return 3;
+            } else if (rating <= 999) {
+                return 4;
+            } else {
+                return 5;
+            }
+        }
+
+        import { getRanking } from './ajax/users.js';
+
+            getRanking(30, 1, data => {
+                var index = 0;
+                var playersHtml = "";
+                for(var player of data.data) {
+                    if(index == 0) {
+                        $("#top1Name").text(player.name);
+                        $("#top1Rating").text("Rating: " + player.rating.toFixed(0));
+                    } else {
+                        
+                        var _thisPlayerHtml = `
+                        <div class="media text-muted pt-3 border-bottom border-gray">
+                            <div class="mr-2 rounded" data-holder-rendered="true" style="width: 32px; height: 32px; text-align: center; font-weight: 800;">${index+1}</div>
+                            <p class="media-body pb-3 mb-0 small lh-125">
+                                <strong class="d-block text-gray-dark">${player.name}</strong>
+                                Rating: ${player.rating.toFixed(0)}
+                            </p>
+                            <img src="./images/elos/${getElo(player.rating)}.png" style="width: 35px" />
                         </div>
-                        <button id="submit">Pesquisar</button>
-                    </div>
-                </div>
+                        `;
 
-                <div id="selectBar"></div>
-
-                <br>
-
-                <button id="shuffler">Embaralhar</button>
-
-            </div>
-
-            <div>
-                <p id="possibilities">Nenhum jogador foi adicionado ainda</p>
-            </div><br>
-
-            <div id="playerBoard">
-                <div>
-                    <p id="team1Rating" class="fw9"></p>
-                    <ul id="team1"></ul>
-                </div>
-                <div>
-                    <p id="team2Rating" class="fw9"></p>
-                    <ul id="team2"></ul>
-                </div>
-            </div>
-
-            <div id="winnerSelector" style="display: none;">
-                <button onclick="selectWinner(1)">Time 1</button>
-                <button onclick="selectWinner(2)">Time 2</button>
-            </div>
-        </div>
-    </section>
-</body>
-
-<script type="module">
-    import { searchPlayer, balanceTeam, updateElo } from './ajax/users.js';
-
-    var possibilities = [];
-    var team1 = [];
-    var team2 = [];
-
-    // Toda vez que digitar algo no buscador
-    $("#submit").click(e => {
-        e.preventDefault();
-        var searching = $("#newPlayer").val();
-        searchPlayer(searching, data => {
-            if (data.length > 0) {
-                var selectHtml = '';
-                for (var player of data) {
-                    var _thisPlayerHtml = `<span onclick="addPlayer('${player.name}', ${player.id}, ${player.rating})" class="selectItem">${player.name} (${player.rating.toFixed(0)})</span>`;
-                    selectHtml += _thisPlayerHtml;
+                        playersHtml += _thisPlayerHtml;
+                    }
+                    index++;
                 }
 
-                $("#selectBar").html(selectHtml);
-                $("#selectBar").show(200);
-            }
-        }, err => {
-            console.log(err)
-        })
-    });
+                playersHtml += `
+                    <small class="d-block text-right mt-3">
+                        <a href="#">Ver ranking completo</a>
+                    </small>
+                `;
 
+                $("#topPlayersPlace").html(playersHtml);
 
-    function addPlayer(name, id, rating) {
-        if (possibilities.find(x => x.id == id)) {
-            $("#selectBar").hide(200);
-            return;
-        }
-
-        $("#selectBar").hide(200);
-
-        possibilities.push({
-            id,
-            name,
-            rating
-        });
-
-        refreshPossibilites();
-    }
-    window.addPlayer = addPlayer;
-
-    function refreshPossibilites() {
-        document.querySelector("#possibilities").innerHTML = 'Jogadores:';
-        var index = 0;
-        for (var p of possibilities) {
-            if (index == 0) {
-                document.querySelector("#possibilities").innerHTML += ` ${p.name} (${p.rating.toFixed(0)})`;
-            } else {
-                document.querySelector("#possibilities").innerHTML += `, ${p.name} (${p.rating.toFixed(0)})`;
-            }
-
-            index++;
-        }
-    }
-
-    function shufflePlayers(array) {
-        // Função para embaralhar os elementos de um array
-        function shuffle(array) {
-            for (let i = array.length - 1; i > 0; i--) {
-                const j = Math.floor(Math.random() * (i + 1));
-                [array[i], array[j]] = [array[j], array[i]];
-            }
-            return array;
-        }
-
-        // Verifica se o array tem a chave "players" e se é um array
-        if (Array.isArray(array.players)) {
-            array.players = shuffle(array.players);
-            return array;
-        } else {
-            console.error("O objeto não contém a chave 'players' ou 'players' não é um array.");
-            return null;
-        }
-    }
-
-    function clearSearch() {
-        $("#newPlayer").val("");
-        $("#selectBar").hide(200);
-    }
-    window.clearSearch = clearSearch;
-
-    function shuffle() {
-        var expectedFormat = {
-            "players": possibilities.map(function (item) {
-                return { "id": item.id };
-            })
-        }
-
-        expectedFormat = shufflePlayers(expectedFormat);
-
-        balanceTeam(expectedFormat, data => {
-            document.querySelector("#team1").innerHTML = '';
-            document.querySelector("#team2").innerHTML = '';
-
-            team1 = data.team1.players.map(function (player) {
-                return player.id;
+                console.log(data);
+            }, err => {
+                console.log(err);
             });
 
-            team2 = data.team2.players.map(function (player) {
-                return player.id;
-            });
+    </script>
 
-            $("#team1Rating").html(`Time 1: ${data.team1.totalRating.toFixed(0)}`)
-            $("#team2Rating").html(`Time 2: ${data.team2.totalRating.toFixed(0)}`)
-
-            for (var p of data.team1.players) {
-                document.querySelector("#team1").innerHTML += `<li>${p.name} (${p.rating.toFixed(0)})</li>`
-            }
-            for (var p of data.team2.players) {
-                document.querySelector("#team2").innerHTML += `<li>${p.name} (${p.rating.toFixed(0)})</li>`
-            }
-
-            $("#playerBoard").show(200);
-            $("#winnerSelector").show(200);
-
-        }, err => {
-            console.log(err);
-        })
-    }
-
-    $("#shuffler").click(shuffle);
-
-
-    function showPlayers(array) {
-        let currentIndex = array.length, randomIndex;
-
-        // While there remain elements to shuffle.
-        while (currentIndex != 0) {
-
-            // Pick a remaining element.
-            randomIndex = Math.floor(Math.random() * currentIndex);
-            currentIndex--;
-
-            // And swap it with the current element.
-            [array[currentIndex], array[randomIndex]] = [
-                array[randomIndex], array[currentIndex]];
-        }
-
-        return array;
-    }
-
-    function selectWinner(team) {
-        var match = {
-            team1,
-            team2,
-            "winner": team
-        };
-
-        updateElo(match, data => {
-
-            data.forEach(function (team, index) {
-                team.forEach(function (player) {
-                    var existingPlayer = possibilities.find(function (p) {
-                        return p.id === player.id;
-                    });
-                    if (existingPlayer) {
-                        existingPlayer.rating = player.rating;
-                    }
-                });
-            });
-
-            $("#playerBoard").hide(200);
-            $("#winnerSelector").hide(200);
-            refreshPossibilites();
-        }, err => {
-            console.log(err);
-        })
-    }
-
-    window.selectWinner = selectWinner;
-
-</script>
+</body>
 
 </html>
