--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,12 +38,22 @@
     </nav>
 
     <main role="main" class="container">
-        <div class="d-flex align-items-center p-3 my-3 text-white-50 bg-purple rounded box-shadow">
-            <img class="mr-3" src="./images/trophy.webp" alt=""
-                width="48" height="48">
-            <div class="lh-100">
-                <h6 class="mb-0 text-white lh-100" id="top1Name">Paulo Ricardo</h6>
-                <small id="top1Rating">Rating: 897</small>
+        <div
+            class="d-flex align-items-center justify-content-between p-3 my-3 text-white-50 bg-purple rounded box-shadow">
+            <div class="d-flex align-items-center">
+                <img class="mr-3" src="./images/trophy.webp" alt=""
+                    width="48" height="48">
+                <div class="lh-100">
+                    <h6 class="mb-0 text-white lh-100" id="top1Name"></h6>
+                    <small id="top1Rating"></small>
+                </div>
+            </div>
+
+            <div>
+                <div class="d-flex align-items-center">
+                    <div class="mr-2"><strong id="top1Won" class="text-success"></strong>/<strong class="text-danger" id="top1Lost"></strong></div>
+                    <img id="top1Elo" style="width: 35px" />
+                </div>
             </div>
         </div>
 
@@ -71,7 +81,7 @@
     <script type="module">
 
         function getElo(rating) {
-            if(rating <= 725) {
+            if (rating <= 725) {
                 return 1;
             } else if (rating <= 775) {
                 return 2;
@@ -86,43 +96,50 @@
 
         import { getRanking } from './ajax/users.js';
 
-            getRanking(30, 1, data => {
-                var index = 0;
-                var playersHtml = "";
-                for(var player of data.data) {
-                    if(index == 0) {
-                        $("#top1Name").text(player.name);
-                        $("#top1Rating").text("Rating: " + player.rating.toFixed(0));
-                    } else {
-                        
-                        var _thisPlayerHtml = `
+        getRanking(30, 1, data => {
+            var index = 0;
+            var playersHtml = "";
+            for (var player of data.data) {
+                if (index == 0) {
+                    $("#top1Name").text(player.name);
+                    $("#top1Rating").text("Rating: " + player.rating.toFixed(0));
+                    $("#top1Elo").prop("src", `./images/elos/${getElo(player.rating)}.png`);
+                    $("#top1Won").text(player.matchesWon);
+                    $("#top1Lost").text(player.matchesLost);
+                } else {
+
+                    var _thisPlayerHtml = `
                         <div class="media text-muted pt-3 border-bottom border-gray">
-                            <div class="mr-2 rounded" data-holder-rendered="true" style="width: 32px; height: 32px; text-align: center; font-weight: 800;">${index+1}</div>
+                            <div class="mr-2 rounded" data-holder-rendered="true" style="width: 32px; height: 32px; text-align: center; font-weight: 800;">${index + 1}</div>
                             <p class="media-body pb-3 mb-0 small lh-125">
                                 <strong class="d-block text-gray-dark">${player.name}</strong>
                                 Rating: ${player.rating.toFixed(0)}
                             </p>
-                            <img src="./images/elos/${getElo(player.rating)}.png" style="width: 35px" />
+                            <div class="d-flex align-items-center">
+                                <div class="mr-2"><strong class="text-success">${player.matchesWon}</strong>/<strong class="text-danger">${player.matchesLost}</strong></div>
+                                <img src="./images/elos/${getElo(player.rating)}.png" style="width: 35px" />
+                            </div>
+                            
                         </div>
                         `;
 
-                        playersHtml += _thisPlayerHtml;
-                    }
-                    index++;
+                    playersHtml += _thisPlayerHtml;
                 }
+                index++;
+            }
 
-                playersHtml += `
+            playersHtml += `
                     <small class="d-block text-right mt-3">
                         <a href="#">Ver ranking completo</a>
                     </small>
                 `;
 
-                $("#topPlayersPlace").html(playersHtml);
+            $("#topPlayersPlace").html(playersHtml);
 
-                console.log(data);
-            }, err => {
-                console.log(err);
-            });
+            console.log(data);
+        }, err => {
+            console.log(err);
+        });
 
     </script>
 
