--- a/frontend/add-user.html
+++ b/frontend/add-user.html
@@ -11,42 +11,100 @@
     <title>Volelo</title>
     <link href="./dist/bootstrap.min.css" rel="stylesheet">
     <link href="./dist/offcanvas.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body class="bg-light">
     <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Volelo</a>
-        <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse offcanvas-collapse justify-content-end" id="navbarsExampleDefault">
-            <ul class="navbar-nav mr-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Ranking <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./game.html">Partida</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" onclick="isLoggedIn()">Criar Jogador</a>
-                </li>
-            </ul>
+        <div class="container">
+            <a class="navbar-brand" href="#">Volelo</a>
+            <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse offcanvas-collapse justify-content-end" id="navbarsExampleDefault">
+                <ul class="navbar-nav mr-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./index.html">Ranking</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./game.html">Partida</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Criar Jogador <span class="sr-only">(current)</span></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
-    <main role="main" class="container">
-        <div class="input-group mb-3">
-            <input id="player" type="text" class="form-control" placeholder="Nome do jogador" aria-label="Nome do jogador" aria-describedby="basic-addon2">
-            <button class="btn btn-primary" onclick="newPlayers()">Enviar</button>
+    <main role="main" class="container mt-5">
+        <h3>Adicionar Jogador</h3>
+        <p>Esta tela é utilizada para adicionar <strong>novos jogadores</strong> à aplicação. Tome cuidado para não
+            adicionar novamente jogadores já existentes.</p>
+        <div class="d-flex mb-3">
+            <input id="player" type="text" class="form-control mr-3" placeholder="Nome do jogador"
+                aria-label="Nome do jogador" aria-describedby="basic-addon2">
+            <button onclick="preAddPlayer()" type="button" class="btn btn-primary">
+                Adicionar Jogador
+            </button>
         </div>
         <div>
             <ul id="playerList"></ul>
         </div>
     </main>
 
+
+
+    <!-- Modal -->
+    <div class="modal fade modal-dialog modal-dialog-centered" id="addPlayerModal" tabindex="-1"
+        aria-labelledby="addPlayerModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addPlayerModalLabel">Adicionar jogador</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Tem certeza que deseja adicionar o jogador <strong id="playerName">nome do jogador</strong>?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="button" id="submitUser" onclick="addPlayer()"
+                        class="btn btn-primary">
+                        <div id="submitUserSpinner" class="spinner-border" style="
+                        width: 15px;
+                        height: 15px;
+                        display: none;
+                        " role="status">
+                            <span class="visually-hidden">Carregando...</span>
+                        </div>
+                        Confirmar
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="basicToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header bg-primary text-light d-flex justify-content-between">
+                <h5 class="my-0">Sucesso</h5>
+                <button type="button" class="btn-close mr-1 white btn-close-white" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
+                O jogador foi adicionado com sucesso.
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
     <script src="../../assets/js/vendor/holder.min.js"></script>
     <script>
         $(function () {
@@ -56,48 +114,51 @@
                 $('.offcanvas-collapse').toggleClass('open')
             })
         })
-
-        const names = [];
-
-        function newPlayers() {
-            const player = document.getElementById("player").value;
-            const playerList = document.getElementById("playerList");
-            const newPlayerItem = document.createElement("li");
-            const removeButton = document.createElement("button");
-
-            if (player === "") {
-                alert("O campo não pode ser vazio");
-            } else {
-                newPlayerItem.textContent = player;
-                removeButton.textContent = "Remover";
-                removeButton.className = "btn btn-danger btn-sm ml-2";
-                removeButton.onclick = function() {
-                    playerList.removeChild(newPlayerItem);
-                    const index = names.indexOf(player);
-                    if (index > -1) {
-                        names.splice(index, 1);
-                    }
-                    console.log(names);
-                };
-                
-                newPlayerItem.appendChild(removeButton);
-                playerList.appendChild(newPlayerItem);
-                document.getElementById("player").value = "";
-                names.push(player);
-                console.log(names);
-            }
-        }
-
-        function isLoggedIn() {
-            let login = localStorage.getItem("isLogged");
-
-            if (login === "true") {
-                window.location.href = "https://curtinaz.github.io/volelo/frontend/add-user.html";
-            } else {
-                window.location.href = "https://curtinaz.github.io/volelo/frontend/login.html";
-            }
-        }
     </script>
+
+    <script type="module">
+        import { newUser } from './ajax/users.js'
+
+        var userName = "";
+        var addPlayerModal = new bootstrap.Modal(document.getElementById('addPlayerModal'), {})
+        var toastr = new bootstrap.Toast(document.querySelector('#basicToast'))       
+
+        function preAddPlayer() {
+            userName = document.getElementById("player").value;
+
+            if (userName === "") {
+                alert("O campo não pode ser vazio");
+                return;
+            }
+
+            $("#playerName").text(userName);
+            addPlayerModal.show();
+        }
+
+        function addPlayer() {
+
+            $("#submitUser").prop('disabled', true)
+            $("#submitUserSpinner").show();
+
+            newUser(userName, data => {
+                document.getElementById("player").value = "";
+                $("#submitUser").prop("disabled", false)
+                addPlayerModal.hide();
+                $("#submitUserSpinner").hide();
+                toastr.show();
+            }, err => {
+                console.log(err)
+                $("#submitUser").prop("disabled", false)
+                $("#submitUserSpinner").hide();
+            })
+
+        }
+
+        window.preAddPlayer = preAddPlayer;
+        window.addPlayer = addPlayer;
+    </script>
+
+
 </body>
 
 </html>
